# Interlatent

./: .gitignore  GUIDE.md  README.md  environment.yaml  full_code.txt  latents.db  private_key.pem  project_docs.md  pyproject.toml  requirements.txt
artifacts/: transcoder_mlp_extractor_policy_net_0_20250713_063042.pth  transcoder_mlp_extractor_policy_net_0_20250713_063302.pth  transcoder_mlp_extractor_policy_net_0_20250713_063540.pth  transcoder_mlp_extractor_policy_net_0_20250713_063744.pth  transcoder_mlp_extractor_policy_net_0_20250713_064017.pth  transcoder_mlp_extractor_policy_net_0_20250713_064729.pth  transcoder_mlp_extractor_policy_net_0_20250713_064940.pth  transcoder_mlp_extractor_policy_net_0_20250713_065737.pth  transcoder_mlp_extractor_policy_net_0_20250713_070522.pth
catchers/: activation_catcher.py
data/: character_dilemmas.csv
demos/basics/: latent_diff_demo.py  llm_1.py  llm_real_model_demo.py  llm_workflow_demo.py  online_sae_demo.py  prompt_dataset_demo.py  vis_demo.py
interlatent/: __init__.py  collector.py  hooks.py  metrics.py  schema.py
interlatent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
runs/: cartpole_raw.db  demo.db
scripts/: run_transcoder.py  setup_env.sh
tests/: latent_diff_demo.py  llm_1.py  llm_hf_direct.py  llm_real_model_demo.py  llm_vllm_local.py  llm_workflow_demo.py  ministral3_demo.py  test_correlations.py  test_end_to_end.py  test_llm_real_model.py  test_llm_workflow.py  test_metrics.py  test_transcoder.py  vis_demo.py
utils/: hook_utils.py
vis/: plot.py  summary.py
(+86 files in other folders)
