[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interlatent"
version = "0.0.0"
dependencies = []

[project.optional-dependencies]
dev = [
  "torch==2.2.2 ; platform_machine != 'arm64'",
  "gymnasium",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["interlatent"]
exclude = ["tests", "scripts", "runs", "keys", "artifacts", "pretrained"]
